universe-apps/base/universe-watchdog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universe-watchdog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    spec:
      containers:
      - name: main
        image: 076129510628.dkr.ecr.us-east-1.amazonaws.com/universe-watchdog:dev
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http
        readinessProbe:
          httpGet:
            path: /v1/health
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /v1/health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
      serviceAccountName: default
