universe-apps/base/universe-watchdog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: universe-watchdog
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
