universe-apps/base/universe-watchdog/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: universe-watchdog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Download-Options: noopen";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-XSS-Protection: 1; mode=block";
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - universe-watchdog.local
      secretName: universe-watchdog-tls
  rules:
    - host: universe-watchdog.local
      http:
        paths:
          - path: /
            backend:
              serviceName: universe-watchdog
              servicePort: http
